[gd_scene load_steps=3 format=3 uid="uid://d0e1f2g3h4i5j"]

[ext_resource type="Script" path="res://scripts/GameLauncher.gd" id="1_launcher"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_loading"]
bg_color = Color(0.1, 0.1, 0.2, 0.9)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 1, 0.8)

[node name="GameLauncher" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_launcher")

[node name="SplashScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="SplashScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.1, 0.15, 1)

[node name="BackgroundPattern" type="ColorRect" parent="SplashScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.2, 0.3, 0.1)

[node name="TitleContainer" type="VBoxContainer" parent="SplashScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameLogo" type="Label" parent="SplashScreen/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "üéÆ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameTitle" type="Label" parent="SplashScreen/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
text = "Êï∞Â≠¶ÂÜíÈô©"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameSubtitle" type="Label" parent="SplashScreen/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 0.9)
text = "Math Adventure"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadingPanel" type="Panel" parent="SplashScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = 50.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_loading")

[node name="LoadingContainer" type="VBoxContainer" parent="SplashScreen/LoadingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingLabel" type="Label" parent="SplashScreen/LoadingPanel/LoadingContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
text = "Ê≠£Âú®ÂêØÂä®Ê∏∏Êàè..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadingBar" type="ProgressBar" parent="SplashScreen/LoadingPanel/LoadingContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
max_value = 100.0
step = 1.0
value = 0.0
show_percentage = true

[node name="LoadingHint" type="Label" parent="SplashScreen/LoadingPanel/LoadingContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 0.7)
text = "Êåâ F11 Âø´ÈÄüË∑≥ËΩ¨Âà∞‰∏ªËèúÂçïÔºåÊåâ F12 Ë∑≥ËΩ¨Âà∞Á¨¨‰∏ÄÂÖ≥"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VersionLabel" type="Label" parent="SplashScreen"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.5, 0.6, 0.7, 0.8)
text = "ÁâàÊú¨ 1.2.0"
horizontal_alignment = 2
vertical_alignment = 2

[node name="CopyrightLabel" type="Label" parent="SplashScreen"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -30.0
offset_right = 300.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.5, 0.6, 0.7, 0.8)
text = "¬© 2024 Êï∞Â≠¶ÂÜíÈô©Âõ¢Èòü"
vertical_alignment = 2